--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
             <version>4.3</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.eclipse.swt/org.eclipse.swt.win32.win32.x86 -->
         <!--<dependency>-->
         <!--<groupId>org.eclipse.swt</groupId>-->
